--- a/css/plugins/help.css
+++ b/css/plugins/help.css
@@ -10,6 +10,16 @@
   content: "";
   height: 0;
 }
+.hide-by-clipping {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
 .fr-modal .fr-modal-wrapper .fr-modal-body .fr-help-modal {
   text-align: left;
   padding: 20px 20px 10px;
