--- a/css/plugins/table.css
+++ b/css/plugins/table.css
@@ -10,6 +10,16 @@
   content: "";
   height: 0;
 }
+.hide-by-clipping {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
 .fr-element table td.fr-selected-cell,
 .fr-element table th.fr-selected-cell {
   border: 1px double #1e88e5;
