Fixes froala/wysiwyg-editor#1665.

--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -761,7 +761,10 @@ body.prevent-scroll.fr-mobile {
   -moz-transition: color 0.2s ease 0s;
   -ms-transition: color 0.2s ease 0s;
   -o-transition: color 0.2s ease 0s;
-  z-index: 1;
+  z-index: 3;
+  width: 100%;
+  display: block;
+  background: #ffffff;
 }
 .fr-popup .fr-input-line input.fr-not-empty:focus + label,
 .fr-popup .fr-input-line textarea.fr-not-empty:focus + label {
