--- a/css/themes/gray.css
+++ b/css/themes/gray.css
@@ -952,6 +952,7 @@
   -moz-transition: color 0.2s ease 0s;
   -ms-transition: color 0.2s ease 0s;
   -o-transition: color 0.2s ease 0s;
+  background: #f5f5f5;
 }
 .gray-theme.fr-popup .fr-input-line input.fr-not-empty:focus + label,
 .gray-theme.fr-popup .fr-input-line textarea.fr-not-empty:focus + label {
