Add Video upload.

--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -567,6 +567,39 @@
     bottom: -5px;
   }
 }
+.dark-theme .fr-video-upload-layer {
+  border: dashed 2px #808080;
+  padding: 25px 0;
+}
+.dark-theme .fr-video-upload-layer:hover {
+  background: #3d3d3d;
+}
+.dark-theme .fr-video-upload-layer.fr-drop {
+  background: #3d3d3d;
+  border-color: #42a5f5;
+}
+.dark-theme .fr-video-upload-layer .fr-form {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.dark-theme .fr-video-progress-bar-layer > h3 {
+  margin: 10px 0;
+}
+.dark-theme .fr-video-progress-bar-layer > div.fr-loader {
+  background: #c6e4fc;
+}
+.dark-theme .fr-video-progress-bar-layer > div.fr-loader span {
+  background: #42a5f5;
+  -webkit-transition: width 0.2s ease 0s;
+  -moz-transition: width 0.2s ease 0s;
+  -ms-transition: width 0.2s ease 0s;
+  -o-transition: width 0.2s ease 0s;
+}
+.dark-theme .fr-video-progress-bar-layer > div.fr-loader.fr-indeterminate span {
+  top: 0;
+}
 .dark-theme.fr-video-overlay {
   top: 0;
   left: 0;
