--- a/css/froala_editor.pkgd.css
+++ b/css/froala_editor.pkgd.css
@@ -2360,6 +2360,52 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
   clip: rect(0, 0, 0, 0);
   border: 0;
 }
+.fr-modal .fr-modal-wrapper .fr-modal-body .fr-special-characters-modal {
+  text-align: left;
+  padding: 20px 20px 10px;
+}
+.fr-modal .fr-modal-wrapper .fr-modal-body .fr-special-characters-modal .fr-special-characters-list {
+  margin-bottom: 20px;
+}
+.fr-modal .fr-modal-wrapper .fr-modal-body .fr-special-characters-modal .fr-special-characters-title {
+  font-weight: bold;
+  font-size: 14px;
+  padding: 6px 0 4px;
+  margin: 0 0 5px;
+}
+.fr-modal .fr-modal-wrapper .fr-modal-body .fr-special-characters-modal .fr-special-character {
+  display: inline-block;
+  font-size: 16px;
+  width: 20px;
+  height: 20px;
+  padding: 5px;
+  line-height: 20px;
+  cursor: default;
+  font-weight: normal;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  text-align: center;
+  border: 1px solid #cccccc;
+  margin: -1px 0 0 -1px;
+}
+
+.clearfix::after {
+  clear: both;
+  display: block;
+  content: "";
+  height: 0;
+}
+.hide-by-clipping {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
 .fr-element table td.fr-selected-cell,
 .fr-element table th.fr-selected-cell {
   border: 1px double #1e88e5;
