--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -482,6 +482,9 @@
 .dark-theme .fr-qi-helper a.fr-btn.fr-floating-btn {
   color: #ffffff;
 }
+.dark-theme.fr-modal .fr-modal-wrapper .fr-modal-body .fr-special-characters-modal .fr-special-character {
+  border: 1px solid #aaaaaa;
+}
 .dark-theme .fr-element table td.fr-selected-cell,
 .dark-theme .fr-element table th.fr-selected-cell {
   border: 1px double #42a5f5;
