Fixes froala/wysiwyg-editor#1715. (#399)

--- a/css/froala_style.css
+++ b/css/froala_style.css
@@ -23,6 +23,9 @@
 .fr-view {
   text-align: initial;
 }
+.fr-view span[style~="color:"] a {
+  color: inherit;
+}
 .fr-view strong {
   font-weight: 700;
 }
