--- a/css/themes/red.css
+++ b/css/themes/red.css
@@ -882,6 +882,10 @@
   bottom: 0;
   right: 0;
 }
+.red-theme.fr-modal.fr-middle .fr-modal-wrapper {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 .red-theme.fr-modal .fr-modal-wrapper {
   border-radius: 2px;
   -moz-border-radius: 2px;
@@ -923,6 +927,7 @@
 }
 .red-theme.fr-modal .fr-modal-wrapper .fr-modal-head i.fr-modal-close {
   top: 0;
+  bottom: 0;
   right: 0;
   -webkit-transition: color 0.2s ease 0s;
   -moz-transition: color 0.2s ease 0s;
@@ -935,6 +940,25 @@
 }
 .red-theme.fr-modal .fr-modal-wrapper div.fr-modal-body:focus {
   outline: 0;
+}
+.red-theme.fr-modal .fr-modal-wrapper div.fr-modal-body button.fr-command {
+  color: #ffca28;
+  -webkit-transition: background 0.2s ease 0s;
+  -moz-transition: background 0.2s ease 0s;
+  -ms-transition: background 0.2s ease 0s;
+  -o-transition: background 0.2s ease 0s;
+}
+.red-theme.fr-modal .fr-modal-wrapper div.fr-modal-body button.fr-command:hover,
+.red-theme.fr-modal .fr-modal-wrapper div.fr-modal-body button.fr-command:focus {
+  background: #c65a59;
+  color: #ffca28;
+}
+.red-theme.fr-modal .fr-modal-wrapper div.fr-modal-body button.fr-command:active {
+  background: #d48382;
+  color: #ffca28;
+}
+.red-theme.fr-modal .fr-modal-wrapper div.fr-modal-body button::-moz-focus-inner {
+  border: 0;
 }
 .red-theme.red-theme.fr-desktop .fr-modal-wrapper .fr-modal-head i:hover {
   background: #c65a59;
