--- a/css/froala_editor.pkgd.css
+++ b/css/froala_editor.pkgd.css
@@ -570,11 +570,15 @@ body.prevent-scroll.fr-mobile {
 .fr-modal.fr-middle .fr-modal-wrapper {
   margin-top: 0;
   margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  position: absolute;
 }
 .fr-modal .fr-modal-wrapper {
   border-radius: 2px;
