--- a/css/themes/red.css
+++ b/css/themes/red.css
@@ -885,6 +885,8 @@
 .red-theme.fr-modal.fr-middle .fr-modal-wrapper {
   margin-top: 0;
   margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 .red-theme.fr-modal .fr-modal-wrapper {
   border-radius: 2px;
