--- a/css/froala_editor.pkgd.css
+++ b/css/froala_editor.pkgd.css
@@ -316,7 +316,7 @@ iframe.fr-iframe {
   font-size: 14px;
   display: block;
   line-height: 17px;
-  min-width: 38px;
+  min-width: 34px;
   float: left;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -2441,6 +2441,73 @@ div.fr-modal-body div.fr-image-list div.fr-image-container .fr-insert-img {
   text-align: center;
   border: 1px solid #cccccc;
   margin: -1px 0 0 -1px;
+}
+
+.clearfix::after {
+  clear: both;
+  display: block;
+  content: "";
+  height: 0;
+}
+.hide-by-clipping {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+.examples-variante > a {
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.sc-cm-holder > .sc-cm {
+  border-top: 5px solid #222222 !important;
+  padding: 0px !important;
+  line-height: 200% !important;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px 1px rgba(0, 0, 0, 0.16);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px 1px rgba(0, 0, 0, 0.16);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px 1px rgba(0, 0, 0, 0.16);
+}
+.sc-cm .sc-cm__item.examples-variante.sc-cm__item_active > a > i {
+  display: none !important;
+}
+.sc-cm .sc-cm__item.examples-variante > a > i {
+  display: none !important;
+}
+.sc-cm__item_dropdown .i-icon {
+  display: none !important;
+}
+.sc-cm__item_dropdown .i-icon::before {
+  display: none !important;
+}
+.sc-cm::before {
+  display: none !important;
+}
+div.sc-cm-holder.sc-cm_show > ul > li.sc-cm__item.sc-cm__item_dropdown.sc-cm__item_arrow > div > ul {
+  border-style: none !important;
+  padding: 0px !important;
+}
+.sc-cm__item_dropdown:hover > a,
+.sc-cm a:hover {
+  background-color: #ebebeb !important;
+}
+.sc-cm__item_active > a,
+.sc-cm__item_active > a:hover,
+.sc-cm a:active,
+.sc-cm a:focus {
+  background-color: #d6d6d6 !important;
+}
+.sc-cm__item > a {
+  line-height: 200% !important;
+}
+.sc-cm-holder > .sc-cm:before {
+  background-color: #ebebeb !important;
+}
+.sc-cm-holder {
+  display: none;
 }
 
 .clearfix::after {
