--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -483,6 +483,26 @@
 .dark-theme.fr-modal .fr-modal-wrapper .fr-modal-body .fr-special-characters-modal .fr-special-character {
   border: 1px solid #aaaaaa;
 }
+.dark-theme .examples-variante > a {
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.dark-theme .sc-cm-holder > .sc-cm {
+  border-top: 5px solid #222222 !important;
+}
+.dark-theme .sc-cm__item_dropdown:hover > a,
+.dark-theme .sc-cm a:hover {
+  background-color: #3d3d3d !important;
+}
+.dark-theme .sc-cm__item_active > a,
+.dark-theme .sc-cm__item_active > a:hover,
+.dark-theme .sc-cm a:active,
+.dark-theme .sc-cm a:focus {
+  background-color: #2e2e2e !important;
+}
+.dark-theme .sc-cm-holder > .sc-cm:before {
+  background-color: #3d3d3d !important;
+}
 .dark-theme .fr-element table td.fr-selected-cell,
 .dark-theme .fr-element table th.fr-selected-cell {
   border: 1px double #42a5f5;
@@ -710,7 +730,7 @@
 .dark-theme.fr-popup .fr-command.fr-btn span {
   font-size: 14px;
   line-height: 17px;
-  min-width: 38px;
+  min-width: 34px;
   height: 17px;
   padding: 0 2px;
 }
