--- a/css/themes/red.css
+++ b/css/themes/red.css
@@ -483,6 +483,26 @@
 .red-theme.fr-modal .fr-modal-wrapper .fr-modal-body .fr-special-characters-modal .fr-special-character {
   border: 1px solid #cccccc;
 }
+.red-theme .examples-variante > a {
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.red-theme .sc-cm-holder > .sc-cm {
+  border-top: 5px solid #671b1a !important;
+}
+.red-theme .sc-cm__item_dropdown:hover > a,
+.red-theme .sc-cm a:hover {
+  background-color: #c65a59 !important;
+}
+.red-theme .sc-cm__item_active > a,
+.red-theme .sc-cm__item_active > a:hover,
+.red-theme .sc-cm a:active,
+.red-theme .sc-cm a:focus {
+  background-color: #d48382 !important;
+}
+.red-theme .sc-cm-holder > .sc-cm:before {
+  background-color: #c65a59 !important;
+}
 .red-theme .fr-element table td.fr-selected-cell,
 .red-theme .fr-element table th.fr-selected-cell {
   border: 1px double #ffca28;
@@ -710,7 +730,7 @@
 .red-theme.fr-popup .fr-command.fr-btn span {
   font-size: 14px;
   line-height: 17px;
-  min-width: 38px;
+  min-width: 34px;
   height: 17px;
   padding: 0 2px;
 }
