--- a/css/froala_editor.pkgd.css
+++ b/css/froala_editor.pkgd.css
@@ -646,7 +646,6 @@ body.prevent-scroll.fr-mobile {
 .fr-modal .fr-modal-wrapper .fr-modal-head i.fr-modal-close {
   position: absolute;
   top: 0;
-  bottom: 0;
   right: 0;
   -webkit-transition: color 0.2s ease 0s;
   -moz-transition: color 0.2s ease 0s;
@@ -2078,6 +2077,7 @@ body.fr-fullscreen {
 }
 .fr-modal-head .fr-modal-tags {
   display: none;
+  text-align: left;
 }
 .fr-modal-head .fr-modal-tags a {
   display: inline-block;
