--- a/css/froala_editor.pkgd.css
+++ b/css/froala_editor.pkgd.css
@@ -414,7 +414,7 @@ iframe.fr-iframe {
 .fr-popup.fr-rtl .fr-command.fr-btn {
   float: right;
 }
-.fr-toolbar.fr-inline .fr-command.fr-btn {
+.fr-toolbar.fr-inline .fr-command.fr-btn:not(.fr-hidden) {
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
   display: inline-flex;
