--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -573,6 +573,7 @@ body.prevent-scroll.fr-mobile {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
+  line-height: 1.2;
 }
 .fr-modal.fr-middle .fr-modal-wrapper {
   margin-top: 0;
@@ -752,6 +753,7 @@ body.prevent-scroll.fr-mobile {
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 1.2;
 }
 .fr-popup .fr-input-focus {
   background: #f5f5f5;
@@ -1071,6 +1073,7 @@ body.prevent-scroll.fr-mobile {
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 1.2;
 }
 .fr-toolbar::after {
   clear: both;
