--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -843,6 +843,10 @@
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
 }
+.dark-theme .fr-command.fr-btn + .fr-dropdown-menu.test-height .fr-dropdown-wrapper {
+  height: auto;
+  max-height: 275px;
+}
 .dark-theme .fr-command.fr-btn + .fr-dropdown-menu .fr-dropdown-wrapper {
   background: #353535;
   padding: 0;
