--- a/css/themes/gray.css
+++ b/css/themes/gray.css
@@ -843,6 +843,10 @@
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
 }
+.gray-theme .fr-command.fr-btn + .fr-dropdown-menu.test-height .fr-dropdown-wrapper {
+  height: auto;
+  max-height: 275px;
+}
 .gray-theme .fr-command.fr-btn + .fr-dropdown-menu .fr-dropdown-wrapper {
   background: #f5f5f5;
   padding: 0;
