--- a/css/themes/gray.css
+++ b/css/themes/gray.css
@@ -664,6 +664,15 @@
 .gray-theme .fr-view .fr-img-caption .fr-img-wrap > span {
   padding: 5px 0 0;
 }
+.gray-theme .fr-element .fr-embedly::after {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.gray-theme.fr-box .fr-embedly-resizer {
+  border: solid 1px #0097a7;
+}
 .gray-theme .examples-variante > a {
   font-size: 14px;
   font-family: Arial, Helvetica, sans-serif;
